--- a/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/css/index.css
+++ b/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/css/index.css
@@ -70,6 +70,77 @@ body {
   border-radius:5px;
  
 }
+#dropdown-menu-notApproached{
+  height: 17rem;
+  z-index: 9;
+  position: absolute;
+  top: 73px;
+  left: 21px;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 12rem;
+}
+#dropdown-menu-Approached{
+  height:15rem;
+  width: 12rem;
+z-index: 9;
+   position: absolute;
+   top: 73px;
+   left: 21px; 
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc
+
+}
+#dropdown-menu-Interested{
+  height:12rem;
+  width: 12rem;
+z-index: 9;
+   position: absolute;
+   top: 73px;
+   left: 21px; 
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc
+
+}
+#dropdown-menu-meet{
+  height:8rem;
+  width: 12rem;
+z-index: 9;
+   position: absolute;
+   top: 73px;
+   left: 21px; 
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc
+
+}
+#dropdown-menu-negotiation{
+  height:6rem;
+  width: 12rem;
+z-index: 9;
+   position: absolute;
+   top: 73px;
+   left: 21px; 
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc
+
+}
+#dropdown-menu-commit{
+  height:4rem;
+  width: 12rem;
+z-index: 9;
+   position: absolute;
+   top: 73px;
+   left: 21px; 
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc
+
+}
 .status-holders {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   background-color: #f0f0f0;
@@ -78,7 +149,8 @@ body {
   height: auto;
   overflow: auto;
   border-radius: 10px;
-  margin:0.5rem
+  margin:0.5rem;
+  position: relative;
 }
 .status-header {
   padding: 0.5rem;
@@ -107,10 +179,19 @@ body {
     background-color: #640d81;
 
 }
-#notApproached-addbtn , #Approached-addbtn , #Interested-addbtn ,#meet-addbtn,#notInterested-addbtn{
+#negotiation-header{
+  background-color: #da4820;
+}
+#commit-header{
+  background-color:#FFBF00
+}
+#dd-header{
+  background-color: #483D8B;
+}
+#notApproached-addbtn , #Approached-addbtn , #Interested-addbtn ,#meet-addbtn,#notInterested-addbtn,#negotiation-addbtn,#commit-addbtn,#dd-addbtn{
   cursor: pointer;
 }
-.notApproached-card  ,.Approached-card,.Interested-card,.meet-card ,.notInterested-card{
+.notApproached-card  ,.Approached-card,.Interested-card,.meet-card ,.notInterested-card,.negotiation-card,.commit-card,.dd-card{
   height: 7rem;
   background-color: #fff;
   margin:0.5rem;
@@ -123,12 +204,12 @@ body {
     font-size: smaller;
     color:#ccc
 }
-.notApproached-card-header,.Approached-card-header,.Interested-card-header,.meet-card-header,.notInterested-card-header{
+.notApproached-card-header,.Approached-card-header,.Interested-card-header,.meet-card-header,.notInterested-card-header,.negotiation-card-header,.commit-card-header,.dd-card-header{
     display: flex;
   justify-content: space-between;
 
 }
-.notApproaced-options,.Approaced-options,.Interested-card-options,.meet-card-options,.notInterested-card-options{
+.notApproaced-options,.Approaced-options,.Interested-card-options,.meet-card-options,.notInterested-card-options,.negotiation-card-options,.commit-card-options,.dd-card-options{
     cursor: pointer;
 }
 .user {
@@ -152,7 +233,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+    z-index: 0;
+    position: absolute;
+    left: 26px;
+    top: 77px;
+}
+  
 @media (min-width: 992px) {
   #main_holder {
     display: inline-flex;
