--- a/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/css/index.css
+++ b/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/css/index.css
@@ -7,14 +7,16 @@ body {
   height: 100vh;
   background: #f0f0f0;
 }
-.container{
-    display: block;
+
+.container {
+  display: block;
   /* flex-direction: row; */
   overflow-x: scroll;
   overflow-y: scroll;
   width: 98vw;
   height: 95vh;
 }
+
 .btn-primary {
   background-color: #3342ae !important;
   background: #3342ae !important;
@@ -54,24 +56,33 @@ body {
   height: 100%;
   margin-top: 1vh;
   margin-bottom: 1vh;
-  width:fit-content;
+  width: fit-content;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   overflow-x: auto;
   overflow-y: hidden;
-  background-color:#fff;
+  background-color: #fff;
   display: flex;
   /* flex-direction: row; */
   /* overflow-x: scroll; */
   /* overflow-y: scroll; */
   white-space: nowrap;
-  padding:1rem;
+  padding: 1rem;
   /* background-color: #333; */
-  border-radius:5px;
- 
+  border-radius: 5px;
+
 }
-#dropdown-menu-notApproached{
-  height: 17rem;
+
+#dropdown-menu-notApproached,
+#dropdown-menu-Approached,
+#dropdown-menu-Interested,
+#dropdown-menu-meet,
+#dropdown-menu-negotiation,
+#dropdown-menu-commit,
+#dropdown-menu-notInterested,
+#dropdown-menu-dd,
+#dropdown-menu-sign {
+  height: 18rem;
   z-index: 9;
   position: absolute;
   top: 73px;
@@ -81,77 +92,19 @@ body {
   border: 1px solid #ccc;
   width: 12rem;
 }
-#dropdown-menu-Approached{
-  height:15rem;
-  width: 12rem;
-z-index: 9;
-   position: absolute;
-   top: 73px;
-   left: 21px; 
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #ccc
 
-}
-#dropdown-menu-Interested{
-  height:12rem;
-  width: 12rem;
-z-index: 9;
-   position: absolute;
-   top: 73px;
-   left: 21px; 
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #ccc
-
-}
-#dropdown-menu-meet{
-  height:8rem;
-  width: 12rem;
-z-index: 9;
-   position: absolute;
-   top: 73px;
-   left: 21px; 
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #ccc
-
-}
-#dropdown-menu-negotiation{
-  height:6rem;
-  width: 12rem;
-z-index: 9;
-   position: absolute;
-   top: 73px;
-   left: 21px; 
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #ccc
-
-}
-#dropdown-menu-commit{
-  height:4rem;
-  width: 12rem;
-z-index: 9;
-   position: absolute;
-   top: 73px;
-   left: 21px; 
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #ccc
-
-}
 .status-holders {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   background-color: #f0f0f0;
   width: 15rem;
   border: solid 1px #ccc;
   height: auto;
   overflow: auto;
   border-radius: 10px;
-  margin:0.5rem;
+  margin: 0.5rem;
   position: relative;
 }
+
 .status-header {
   padding: 0.5rem;
   margin: 0.4rem;
@@ -162,83 +115,135 @@ z-index: 9;
   font-weight: 600;
   color: white;
 }
+
 #notApproached-header {
   background-color: #c41e3a;
 }
-#Approached-header{
-    background-color: #3342ae;
+
+#Approached-header {
+  background-color: #3342ae;
 
 }
-#Interested-header{
-    background-color: teal;
+
+#Interested-header {
+  background-color: teal;
 }
-#notInterested-header{
-    background-color: #000;
+
+#notInterested-header {
+  background-color: #000;
 }
-#meet-header{
-    background-color: #640d81;
+
+#meet-header {
+  background-color: #640d81;
 
 }
-#negotiation-header{
+
+#negotiation-header {
   background-color: #da4820;
 }
-#commit-header{
-  background-color:#FFBF00
+
+#commit-header {
+  background-color: #FFBF00
 }
-#dd-header{
+
+#dd-header {
   background-color: #483D8B;
 }
-#notApproached-addbtn , #Approached-addbtn , #Interested-addbtn ,#meet-addbtn,#notInterested-addbtn,#negotiation-addbtn,#commit-addbtn,#dd-addbtn{
+
+#sign-header {
+  background-color: #8B008B;
+}
+
+#notApproached-addbtn,
+#Approached-addbtn,
+#Interested-addbtn,
+#meet-addbtn,
+#notInterested-addbtn,
+#negotiation-addbtn,
+#commit-addbtn,
+#dd-addbtn,
+#sign-addbtn {
   cursor: pointer;
 }
-.notApproached-card  ,.Approached-card,.Interested-card,.meet-card ,.notInterested-card,.negotiation-card,.commit-card,.dd-card{
+
+.notApproached-card,
+.Approached-card,
+.Interested-card,
+.meet-card,
+.notInterested-card,
+.negotiation-card,
+.commit-card,
+.dd-card,
+.sign-card {
   height: 7rem;
   background-color: #fff;
-  margin:0.5rem;
+  margin: 0.5rem;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
-.mandate_id{
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-size: smaller;
-    color:#ccc
+
+.mandate_id {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-size: smaller;
+  color: #ccc
 }
-.notApproached-card-header,.Approached-card-header,.Interested-card-header,.meet-card-header,.notInterested-card-header,.negotiation-card-header,.commit-card-header,.dd-card-header{
-    display: flex;
+
+.notApproached-card-header,
+.Approached-card-header,
+.Interested-card-header,
+.meet-card-header,
+.notInterested-card-header,
+.negotiation-card-header,
+.commit-card-header,
+.dd-card-header,
+.sign-card-header {
+  display: flex;
   justify-content: space-between;
 
 }
-.notApproaced-options,.Approaced-options,.Interested-card-options,.meet-card-options,.notInterested-card-options,.negotiation-card-options,.commit-card-options,.dd-card-options{
-    cursor: pointer;
+
+.notApproaced-options,
+.Approaced-options,
+.Interested-options,
+.notInterested-options,
+.meet-options,
+.negotiation-options,
+.commit-options,
+.dd-options,
+.sign-options {
+  cursor: pointer;
 }
+
 .user {
-    display: inline-block;
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-  
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-  }
-  
-  .stakeholder , .investor{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0rem 0.5rem 
-  }
-  .profiles{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 0;
-    position: absolute;
-    left: 26px;
-    top: 77px;
+  display: inline-block;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
-  
+
+.stakeholder,
+.investor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0rem 0.5rem
+}
+
+.profiles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 0;
+  position: absolute;
+  left: 26px;
+  top: 77px;
+}
+
 @media (min-width: 992px) {
   #main_holder {
     display: inline-flex;
