--- a/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/css/index.css
+++ b/public/accelerator_dashboard/stakeholder_management/modules/kanbanBoard/css/index.css
@@ -233,15 +233,14 @@ body {
   align-items: center;
   margin: 0rem 0.5rem
 }
-
+.notApproached-container{
+ display:flex;
+ flex-direction: column;
+}
 .profiles {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 0;
-  position: absolute;
-  left: 26px;
-  top: 77px;
+}
+.name{
+  word-break: break-word;
 }
 
 @media (min-width: 992px) {
