--- a/public/accelerator_dashboard/stakeholder_management/modules/profile/css/index.css
+++ b/public/accelerator_dashboard/stakeholder_management/modules/profile/css/index.css
@@ -221,3 +221,8 @@ td {
   display: flex;
   justify-content: start;
 }
+
+#main-document_holder {
+  display: flex;
+  justify-content: space-around;
+}
